force-app/main/default/objects/genesis__Applications__c/fields/Age_of_Individual_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Individual_Applicant__c</fullName>
    <label>Age of Individual Applicant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>