force-app/main/default/objects/genesis__Applications__c/fields/Allow_Direct_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Allow_Direct_Marketing__c</fullName>
    <label>Allow Direct Marketing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>