force-app/main/default/objects/genesis__Applications__c/fields/Application_Declined_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Application_Declined_Cancelled_Reason__c</fullName>
    <label>Application Declined/Cancelled Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordability</fullName>
            </value>
            <value>
                <fullName>Credit History</fullName>
            </value>
            <value>
                <fullName>Employment Security</fullName>
            </value>
            <value>
                <fullName>Level of Debt</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Opened in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>