force-app/main/default/objects/genesis__Applications__c/fields/Application_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Application_Percentage__c</fullName>
    <formula>Application_Fee__c/genesis__Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>