force-app/main/default/objects/genesis__Applications__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <formula>IF(ISPICKVAL(genesis__Status__c,&apos;Recommended&apos;),IF(Debt_to_Income_Ratio__c &lt; 6.0,(IF(Age_of_Individual_Applicant__c == NULL,&apos;Dual&apos;,(IF(Age_of_Individual_Applicant__c &lt; 70,&apos;Single&apos;,&apos;Dual&apos;) ))),&apos;Dual&apos;) ,&apos;Invalid Approval Level&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level</label>
    <type>Text</type>
</CustomField>