force-app/main/default/objects/genesis__Applications__c/fields/Bankrupt_Date__c.field-meta.xml
<CustomField>
    <fullName>Bankrupt_Date__c</fullName>
    <label>Bankrupt Date</label>
    <type>Date</type>
</CustomField>