force-app/main/default/objects/genesis__Applications__c/fields/BDM_s_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BDM_s_Email_Address__c</fullName>
    <label>BDM&apos;s Email Address</label>
    <type>Email</type>
</CustomField>