force-app/main/default/objects/genesis__Applications__c/fields/Broker__c.field-meta.xml
<CustomField>
    <fullName>Broker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RJohnston 19/7/21 https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=8&amp;projectKey=AMS&amp;modal=detail&amp;selectedIssue=AMS-864
For reporting on the broker for the application</description>
    <label>Broker</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Broker)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>