force-app/main/default/objects/genesis__Applications__c/fields/Brokers_BDM__c.field-meta.xml
<CustomField>
    <fullName>Brokers_BDM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brokers BDM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>