force-app/main/default/objects/genesis__Applications__c/fields/Business_Purpose_Total__c.field-meta.xml
<CustomField>
    <fullName>Business_Purpose_Total__c</fullName>
    <formula>Buy_Asset_Investment_Amount__c + Marketing_Advertising_Amount__c + Business_Other_Amount__c + Purchase_Business_Amount__c + Working_Capital_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Purpose Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>