force-app/main/default/objects/genesis__Applications__c/fields/Button_disable__c.field-meta.xml
<CustomField>
    <fullName>Button_disable__c</fullName>
    <label>Button disable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>True</fullName>
            </value>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>False</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>