force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Commentary__c</fullName>
    <label>Cash Out Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>