force-app/main/default/objects/genesis__Applications__c/fields/Cash_out_purpose_list__c.field-meta.xml
<CustomField>
    <fullName>Cash_out_purpose_list__c</fullName>
    <label>Cash out purpose list</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Divorce Settlement</fullName>
            </value>
            <value>
                <fullName>Holiday/Travel</fullName>
            </value>
            <value>
                <fullName>Home Improvements</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Investments</fullName>
            </value>
            <value>
                <fullName>Property Purchase</fullName>
            </value>
            <value>
                <fullName>Purchase Goods</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>