force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Purpose_Percent__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Purpose_Percent__c</fullName>
    <formula>Cash_Out_Purpose_Total__c / genesis__Loan_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Out Purpose Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>