force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Purpose_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Purpose_Suitable__c</fullName>
    <label>Cash Out Purpose Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>