force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Purpose_Suitable_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Purpose_Suitable_Commentary__c</fullName>
    <label>Cash Out Purpose Suitable - Commentary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>