force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Purpose_Suitable_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Purpose_Suitable_Rule_Check__c</fullName>
    <description>Cash Out Purpose Suitable Rule Check</description>
    <formula>IF(IF(NOT(INCLUDES(Refinance_purpose_list__c,&apos;Refinance - Cash Out&apos;)),true,IF(ISPICKVAL(Cash_Out_Purpose_Suitable__c,&apos;&apos;),true,false)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Out Purpose Suitable Rule Check</label>
    <type>Checkbox</type>
</CustomField>