force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Purpose_Total__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Purpose_Total__c</fullName>
    <formula>Divorce_Settlement_Amount__c + Holiday_Travel_Amount__c + Home_Imaprovements_Amount__c + Cash_Out_Other_Amount__c + Personal_Investments_Amount__c + Property_Purchase_Amount__c + Purchase_Goods_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Out Purpose Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>