force-app/main/default/objects/genesis__Applications__c/fields/Cash_Out_Section_Render_Check__c.field-meta.xml
<CustomField>
    <fullName>Cash_Out_Section_Render_Check__c</fullName>
    <formula>AND(INCLUDES(ABS_lending_purpose__c, &apos;Refinance - Equity Release&apos;), INCLUDES(Refinance_purpose_list__c, &apos;Refinance - Cash Out&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cash Out Section Render Check</label>
    <type>Checkbox</type>
</CustomField>