force-app/main/default/objects/genesis__Applications__c/fields/Check_Status_Change__c.field-meta.xml
<CustomField>
    <fullName>Check_Status_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Status  Change</label>
    <type>Checkbox</type>
</CustomField>