force-app/main/default/objects/genesis__Applications__c/fields/CL_Date__c.field-meta.xml
<CustomField>
    <fullName>CL_Date__c</fullName>
    <formula>$User.loan__Current_Branch_s_System_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CL Date</label>
    <type>Date</type>
</CustomField>