force-app/main/default/objects/genesis__Applications__c/fields/Clone_Application__c.field-meta.xml
<CustomField>
    <fullName>Clone_Application__c</fullName>
    <label>Clone Application</label>
    <type>TextArea</type>
</CustomField>