force-app/main/default/objects/genesis__Applications__c/fields/Commentary_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Commentary_Last_Updated__c</fullName>
    <description>RJohnston 23/5/22 -https://wingategroup.atlassian.net/jira/software/c/projects/AMS/boards/8?modal=detail&amp;selectedIssue=AMS-1237
For date and time stamping the last time the commentary box was update</description>
    <label>Commentary Last Updated</label>
    <type>DateTime</type>
</CustomField>