force-app/main/default/objects/genesis__Applications__c/fields/Commission_Mandate_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Commission_Mandate_Percentage__c</fullName>
    <formula>(Commission_Mandate_Amount__c/genesis__Loan_Amount__c)*100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Mandate Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>