force-app/main/default/objects/genesis__Applications__c/fields/Commission_Mandate_Percentage_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Commission_Mandate_Percentage_Rule_Check__c</fullName>
    <description>Commission Mandate Percentage Rule Check</description>
    <formula>IF(IF(OR((ISPICKVAL(Commission_Mandate__c,&apos;&apos;)),(ISPICKVAL(Commission_Mandate__c,&apos;No&apos;))),true,false),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Mandate Percentage Rule Check</label>
    <type>Checkbox</type>
</CustomField>