force-app/main/default/objects/genesis__Applications__c/fields/Confirm_repayments_do_not_double__c.field-meta.xml
<CustomField>
    <fullName>Confirm_repayments_do_not_double__c</fullName>
    <label>Confirm repayments do not double</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>