force-app/main/default/objects/genesis__Applications__c/fields/Construction_Progress_Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Construction_Progress_Payment_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Construction Progress Payment Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>