force-app/main/default/objects/genesis__Applications__c/fields/Current_Reverting_Variable_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Reverting_Variable_Rate__c</fullName>
    <label>Current/Reverting Variable Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>