force-app/main/default/objects/genesis__Applications__c/fields/Customer_Interview_completed__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interview_completed__c</fullName>
    <label>Customer Interview completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>