force-app/main/default/objects/genesis__Applications__c/fields/Customer_Interview_Completed_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Customer_Interview_Completed_Rule_Check__c</fullName>
    <formula>IF(NOT(genesis__CL_Product_Name__c == &apos;SMSF Residential&apos; || genesis__CL_Product_Name__c == &apos;SMSF Commercial&apos; || ISPICKVAL(NCCP_status_list__c,&apos;Regulated&apos;)),&apos;Not Render&apos;,&apos;Render&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Interview Completed Rule Check</label>
    <type>Text</type>
</CustomField>