force-app/main/default/objects/genesis__Applications__c/fields/Date_Of_Most_Recent_Conduct_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Most_Recent_Conduct_Issue__c</fullName>
    <description>RJohnston 17/5/21 - for reporting purposes on the latest conduct issue
 https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=8&amp;projectKey=AMS&amp;modal=detail&amp;selectedIssue=AMS-826</description>
    <label>Date Of Most Recent Conduct Issue</label>
    <type>Date</type>
</CustomField>