force-app/main/default/objects/genesis__Applications__c/fields/Date_Of_Most_Recent_Credit_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Most_Recent_Credit_Event__c</fullName>
    <label>Date Of Most Recent Credit Event</label>
    <type>Date</type>
</CustomField>