force-app/main/default/objects/genesis__Applications__c/fields/Debt_Service_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_Service_Ratio__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Debt Service Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>