force-app/main/default/objects/genesis__Applications__c/fields/Does_applicant_understand_English__c.field-meta.xml
<CustomField>
    <fullName>Does_applicant_understand_English__c</fullName>
    <label>Does applicant understand English</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>