force-app/main/default/objects/genesis__Applications__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>