force-app/main/default/objects/genesis__Applications__c/fields/ERF_if_paid_within__c.field-meta.xml
<CustomField>
    <fullName>ERF_if_paid_within__c</fullName>
    <description>RJohnston 14/2/22 - https://wingategroup.atlassian.net/jira/software/c/projects/AMS/boards/8?modal=detail&amp;selectedIssue=AMS-1191
To determine how many years the borrower can take before they can be charged and ERF</description>
    <label>ERF if paid within (Years)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>