force-app/main/default/objects/genesis__Applications__c/fields/ERF_percentage__c.field-meta.xml
<CustomField>
    <fullName>ERF_percentage__c</fullName>
    <description>RJohnston 14/2/22 - https://wingategroup.atlassian.net/jira/software/c/projects/AMS/boards/8?modal=detail&amp;selectedIssue=AMS-1191
To determine the ERF % fee that will be charged on a loan</description>
    <label>ERF %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>