force-app/main/default/objects/genesis__Applications__c/fields/ERF_to_be_charged__c.field-meta.xml
<CustomField>
    <fullName>ERF_to_be_charged__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ERF to be charged</label>
    <type>Checkbox</type>
</CustomField>