force-app/main/default/objects/genesis__Applications__c/fields/Exit_Strategy_Provided_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Provided_Warning_Check__c</fullName>
    <formula>IF(TEXT(Repayment_Type__c) == &apos;Interest Only&apos;, OR(ISPICKVAL(Exit_Strategy_Provided__c, &apos;No&apos;), ISPICKVAL(Exit_Strategy_Provided__c, &apos;&apos;)), FALSE)</formula>
    <label>Exit Strategy Provided Warning Check</label>
    <type>Checkbox</type>
</CustomField>