force-app/main/default/objects/genesis__Applications__c/fields/Exit_Strategy_Suitable_Rule_Check__c.field-meta.xml
<CustomField>
    <fullName>Exit_Strategy_Suitable_Rule_Check__c</fullName>
    <description>Exit Strategy Suitable Rule Check</description>
    <formula>IF(NOT(ISPICKVAL(Repayment_Type__c,&apos;Interest Only&apos;)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exit Strategy Suitable Rule Check</label>
    <type>Checkbox</type>
</CustomField>