force-app/main/default/objects/genesis__Applications__c/fields/Expected_LVR__c.field-meta.xml
<CustomField>
    <fullName>Expected_LVR__c</fullName>
    <formula>genesis__Loan_Amount__c  /  Expected_security_value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>