force-app/main/default/objects/genesis__Applications__c/fields/Expected_security_value__c.field-meta.xml
<CustomField>
    <fullName>Expected_security_value__c</fullName>
    <label>Expected security value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>