force-app/main/default/objects/genesis__Applications__c/fields/External_Auditor__c.field-meta.xml
<CustomField>
    <fullName>External_Auditor__c</fullName>
    <description>https://wingategroup.atlassian.net/secure/RapidBoard.jspa?rapidView=10&amp;projectKey=OIBCR&amp;modal=detail&amp;selectedIssue=OIBCR-325
RJohnston 04/05/2021
For filtering applications for external auditors</description>
    <label>External Auditor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NAB</fullName>
            </value>
            <value>
                <fullName>Kapstream</fullName>
            </value>
            <value>
                <fullName>AUP</fullName>
            </value>
            <value>
                <fullName>CBA</fullName>
            </value>
            <value>
                <fullName>Ernst and Young</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>