force-app/main/default/objects/genesis__Applications__c/fields/First_Home_Buyer__c.field-meta.xml
<CustomField>
    <fullName>First_Home_Buyer__c</fullName>
    <label>First Home Buyer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>YesNo</valueSetName>
    </valueSet>
</CustomField>