force-app/main/default/objects/genesis__Applications__c/fields/Fixed_Rate_Completion_Balance__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Completion_Balance__c</fullName>
    <label>Fixed Rate Completion Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>