force-app/main/default/objects/genesis__Applications__c/fields/Fixed_Rate_Lock_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Lock_In_Date__c</fullName>
    <label>Fixed Rate Lock In Date</label>
    <type>Date</type>
</CustomField>