force-app/main/default/objects/genesis__Applications__c/fields/Fixed_Rate_Lock_In_Date_Warning_Check__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Lock_In_Date_Warning_Check__c</fullName>
    <formula>IF(ISPICKVAL(Interest_type__c, &apos;Fixed Rate&apos;), IF(ISPICKVAL(Fixed_Rate_Lock_In__c, &apos;Yes&apos;), OR(((Fixed_Rate_Lock_In_Date__c - CL_Date__c)/30) &gt; 3, ISNULL(Fixed_Rate_Lock_In_Date__c)), FALSE), FALSE)</formula>
    <label>Fixed Rate Lock In Date Warning Check</label>
    <type>Checkbox</type>
</CustomField>