force-app/main/default/objects/genesis__Applications__c/fields/genesis__Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>genesis__Account_Owner_Name__c</fullName>
    <description>This field is used to capture the name of Account owner.</description>
    <label>Account Owner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>