force-app/main/default/objects/genesis__Applications__c/fields/genesis__Agricultural_Use__c.field-meta.xml
<CustomField>
    <fullName>genesis__Agricultural_Use__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will identify if the proceeds of the loan is being used for agricultural purposes.</description>
    <label>Agricultural Use</label>
    <type>Checkbox</type>
</CustomField>