force-app/main/default/objects/genesis__Applications__c/fields/genesis__Application_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Application_Submission_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>This field needs to be added to the genesis (CL Originate) managed package.</description>
    <label>Application Submission Date</label>
    <type>Date</type>
</CustomField>