force-app/main/default/objects/genesis__Applications__c/fields/genesis__Auto_Debit_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>genesis__Auto_Debit_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This has to be a look up on Account.</description>
    <inlineHelpText>This has to be a look up on Account.</inlineHelpText>
    <label>Auto Debit Account Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Applications (Auto Debit Account Owner)</relationshipLabel>
    <relationshipName>Applications1</relationshipName>
    <type>Lookup</type>
</CustomField>