force-app/main/default/objects/genesis__Applications__c/fields/genesis__Beneficial_Owner_Exempt__c.field-meta.xml
<CustomField>
    <fullName>genesis__Beneficial_Owner_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox determines if the loan/lease application is exempt from beneficial owner requirements.If this is checked,then beneficial ownership information need not be recorded.</description>
    <inlineHelpText>This checkbox determines if the loan/lease application is exempt from beneficial owner requirements.</inlineHelpText>
    <label>Beneficial Owner Exempt</label>
    <type>Checkbox</type>
</CustomField>