force-app/main/default/objects/genesis__Applications__c/fields/genesis__CLTV__c.field-meta.xml
<CustomField>
    <fullName>genesis__CLTV__c</fullName>
    <description>This field stores Combined Loan to Value Ratio</description>
    <inlineHelpText>This field depicts Combined Loan to Value Ratio</inlineHelpText>
    <label>Combined Loan to Value Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>