force-app/main/default/objects/genesis__Applications__c/fields/genesis__Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>genesis__Construction_Type__c</fullName>
    <description>This field will be captured on the application, when the loan involves a construction property as a collateral.This is additional information on the construction property.</description>
    <inlineHelpText>This field will be captured on the application, when the loan involves a construction property as a collateral.</inlineHelpText>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction Only</fullName>
            </value>
            <value>
                <fullName>Construction-to-Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>