force-app/main/default/objects/genesis__Applications__c/fields/genesis__Current_Repayment_Capacity__c.field-meta.xml
<CustomField>
    <fullName>genesis__Current_Repayment_Capacity__c</fullName>
    <description>This field represents the current repayment capacity of all the borrower parties to repay in term of monthly loan payment</description>
    <inlineHelpText>This field represents the current repayment capacity of all the borrower parties to repay in term of monthly loan payment</inlineHelpText>
    <label>Current Repayment Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>