force-app/main/default/objects/genesis__Applications__c/fields/genesis__Downpayment_Percentage__c.field-meta.xml
<CustomField>
    <fullName>genesis__Downpayment_Percentage__c</fullName>
    <description>User Can input Down Payment as percentage also.</description>
    <label>Downpayment %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>