force-app/main/default/objects/genesis__Applications__c/fields/genesis__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>genesis__Due_Date__c</fullName>
    <description>The date deadline to perform an action on the application.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>