force-app/main/default/objects/genesis__Applications__c/fields/genesis__E_Signatures__c.field-meta.xml
<CustomField>
    <fullName>genesis__E_Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox on the application indicates if an electronic signature will be used in closing documents.
		This check box is different from e-sign consent.</description>
    <inlineHelpText>This checkbox is to indicate when an electronic signature will be used.</inlineHelpText>
    <label>E-Signature</label>
    <type>Checkbox</type>
</CustomField>