force-app/main/default/objects/genesis__Applications__c/fields/genesis__Florida_Stamp_Tax__c.field-meta.xml
<CustomField>
    <fullName>genesis__Florida_Stamp_Tax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the Florida documentary stamp tax is applicable.</description>
    <inlineHelpText>Indicate if the Florida documentary stamp tax is applicable.</inlineHelpText>
    <label>Florida Stamp Tax</label>
    <type>Checkbox</type>
</CustomField>