force-app/main/default/objects/genesis__Applications__c/fields/genesis__Florida_Stamp_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>genesis__Florida_Stamp_Tax_Amount__c</fullName>
    <description>This field is to enter the amount of Florida documentary stamp tax.</description>
    <inlineHelpText>This field is to enter the amount of Florida documentary stamp tax.</inlineHelpText>
    <label>Florida Stamp Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>