force-app/main/default/objects/genesis__Applications__c/fields/genesis__HMDA__c.field-meta.xml
<CustomField>
    <fullName>genesis__HMDA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicate if the lender wants to collect government monitoring information - as required by HMDA and Regulation B - through the use of a standalone document.</description>
    <inlineHelpText>This checkbox is to indicate that the loan is exempt from beneficial owner due diligence.</inlineHelpText>
    <label>HMDA Loan</label>
    <type>Checkbox</type>
</CustomField>